--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -1,569 +1,45 @@
-@import url('https://fonts.googleapis.com/css?family=Corben:700');
-
-html,
 body{
-	/* margin:0;
+	margin:0;
 	padding:0;
-    width: 100%;
-	height: auto;
-	background: rgb(1,0,6);
-    background: linear-gradient(347deg, rgba(1,0,6,1) 0%, rgba(26,9,121,1) 31%, rgba(16,177,132,0.8575805322128851) 100%); */
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/223219/pexels-photo-932638%20(1).jpeg")
-    no-repeat center center fixed;
- 	 overflow-x: hidden;
-  	background-size: cover;
-	  width: auto;
-	  height: auto;
-}
-.top{
-	width: auto;
-	height: auto;
-}
-
-.center{
-	height: 600px;
-}
-
-h1 {
-	font-family: 'Corben', cursive;
-	font-size: 4rem;
-	color: rgb(255, 255, 255);
-	letter-spacing: 0.1rem;
-	text-shadow: 0px 10px 10px rgba(25, 3, 54, 0.66);
-}
-
-.hero {
-	min-height: 30rem;
-	position: relative;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-content: center;
-
-}
-
-.snow {
-	position: absolute;
-	min-width: 100vw;
-	min-height: 100vh;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
- 
-}
-
-.hero__content {
-	position: relative;
-    align-self: center;
-    padding: 3rem 0;
-}
-
-.snow .svg {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
-
-#snow-top-layer {
-	will-change: transform;
-	transform: translateY(-768px);
-	animation: fall 22.5s infinite linear;
-}
-
-#snow-bottom-layer {
-	will-change: transform;
-	transform: translateY(-768px);
-	animation: fall 45s infinite linear;
-}
-
-@keyframes fall {
-	
-	100% {
-		transform: translateY(0);
+	background-color: bisque;
+	/* background:#000000; */
+	font-family:arial;
+  }
+  a{
+	text-decoration: none;
 	}
-	
-}
-/*메인 물고기*/
-.arrow-left {
-	width: 0; 
-	height: 0; 
-	/* background-color: green; */
-	border-top: 40px solid transparent;
-	border-bottom: 40px solid transparent; 
-	
-  
-	border-right:100px solid rgba(16,177,132,0.8575805322128851); 
-  }
-  .arrow-left1 {
-	width: 0; 
-	height: 0; 
-	border-top: 30px solid transparent;
-	border-bottom: 30px solid transparent; 
-	margin-top:-70px;
-	margin-left:70px;  
-	border-right:70px solid rgba(16,177,132,0.8575805322128851); 
-	z-index:2;
-	
-  }
-  .arrow-left2 {
-	width: 0; 
-	height: 0; 
-	border-top: 15px solid transparent;
-	border-bottom: 15px solid transparent; 
-	margin-top:-45px;
-  margin-left:140px;  
-	border-right:25px solid rgba(16,177,132,0.8575805322128851); 
-	z-index:-3;
-  }
-  .arrow-right {
-	width: 10px;
-	height:10px;
-	border-radius:100%;
-	background:#F5F2E9;
-	margin-left:35px;
-	margin-top:-10px;
-	animation: blink 3s linear infinite;
-  }
-  .arrow-right1 {
-	width: 0; 
-	margin-top:10px;
-	
-  margin-left:80px;  height: 0; 
-	border-top: 30px solid transparent;
-	border-bottom: 30px solid transparent;
-	  position: absolute;
-	  left: 0px;
-	  top: 0px;
-	  z-index: 1;
-	border-left: 55px solid #F5F2E9;
-  }
-.center-div
-{
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100px;
-  height: 100px;
-  transform: perspective(100px) rotateY(45deg);
-	/* z-index: 1; */
-  
-animation: brow-turn 10s ease infinite;
-  animation-duration: 3s;
-  animation-name: move;
-  animation-iteration-count: infinite;
-  border-radius: 3px;
-}
-.center-div1
-{
-  position: absolute;
-  margin: auto;
-  top: 50%;
-  right:50%;
-  bottom: 0;
-  left: 0;
-  width: 100px;
-  height: 100px;
-  transform: perspective(100px) rotateY(45deg);
-
-  
-animation: brow-turn 10s ease infinite;
-  animation-duration: 3s;
-  animation-name: move;
-  animation-iteration-count: infinite;
-  border-radius: 3px;
-}
-@keyframes move {
-  0% {
-    transform: perspective(100px) rotateY(10deg);
-  }
-  50% {
-    transform: perspective(100px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(100px) rotateY(10deg);
-  }
-}
-
-@keyframes move {
-  0% {
-    transform: perspective(150px) rotateY(10deg);
-  }
-  50% {
-    transform: perspective(150px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(150px) rotateY(10deg);
-  }
-}
-
-@keyframes blink {
-  0% {
-    box-shadow: inset 0 0 0 black, inset -3px 3px 0 5px white, inset 0 -5px 0 25px black;
-  }
-  5% {
-    box-shadow: inset 0 25px 0 black, inset 0 0px 0 5px white, inset 0 -5px 0 25px black;
-  }
-  10% {
-    box-shadow: inset 0 0 0 black, inset 0 3px 0 5px white, inset 0 -5px 0 25px black;
-  }
-  75% {
-    box-shadow: inset 0 0 0 black, inset 3px 3px 0 5px white, inset 0 -5px 0 25px black;
-  }
-  100% {
-    box-shadow: inset 0 0 0 black, inset -3px 3px 0 5px white, inset 0 -5px 0 25px black;
-  }
-}
-
-
-
-.fish {
-	width:100px;
-	height:100px;
+  .loader{
+	position:absolute;
 	top:50%;
-	right:50%;
-	background:rgb(144, 144, 192);
-	position:absolute;
-	animation:10s fly infinite linear;
-	transform:translateX(-50%);
+	left:50%;
+	transform:translate(-50%,-50%);
   }
-
-  .shadow {
-	width:100px;
-	height:20px;
-	background:rgba(0,0,0,.15);
-	position:absolute;
-	top:350px;
-	animation:10s fly2 infinite linear; 
-	border-radius:50%;
-	
-  }
-  span:nth-of-type(1) {
-	width:30px;
-	height:30px;
-	background:white;
-	border-radius:40% 90% 40% 20%;
-	/* z-index:1; */
-	display:inline-block;
-	position:absolute;
-	top: 40%;
-	left: 40%;
+  .loader h2{
+	margin:0;
+	margin-bottom: 10px;
+	padding:0;
+	text-transform:uppercase;
+	font-family: 'Corben', cursive;
+	font-weight: bold;
+	font-size:8em;
+	color:rgba(255,255,255,0.1);
+	background-image:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/223219/pexels-photo-932638%20(1).jpeg");
+	background-repeat:repeat-x;
+	-webkit-background-clip:text;
+	animation: animate 15s linear infinite;
 
   }
-  span:nth-of-type(2) {
-	width:40px;
-	height:40px;
-	background:rgb(64, 0, 94);
-	position:absolute;
-	top:-15px;
-	left:70px;
-  }
-  /* span:nth-of-type(3) {
-	width:80px;
-	height:80px;
-	background: transparent;
-	border-radius:90% 10% 90% 10%;
-	position:absolute;
-	top:-70px;
-	left:85px; 
-  } */
-  /* Fish fly */
-  @keyframes fly{
-	0%,
-	100% {
-	  right:10%;
-	  transform:rotateY(180deg) rotate(45deg);
-	  top:150px;
+  @keyframes animate {
+	0%{
+	  background-position:left 0px top 80px;
 	}
-	1% {
-	  transform:rotateY(0deg) rotate(45deg);
+	40%{
+	  background-position:left 800px top -50px;
 	}
-	25% {
-	  top:180px;
+	  80%{
+	  background-position:left 1600px top -50px;
 	}
-	49% {
-	  transform:rotateY(0deg) rotate(45deg);
-	}
-	50% {
-	  right:90%;
-	  top:150px;
-	  transform:rotateY(180deg) rotate(45deg);
-	}
-	75% {
-	  top:180px;
+	100%{
+	  background-position:left 2400px top 80px;
 	}
   }
-
-
-
-/* Shadow fly */
-/* @keyframes fly2 {
-  0%,
-  100% {
-    right:10%;
-    transform:rotateY(180deg);
-    width:60px;
-    height:10px;
-  }
-  1% {
-    transform:rotateY(0deg);
-  }
-  25% {
-    width:100px;
-    height:20px;
-  }
-  49% {
-    transform:rotateY(0deg);
-  }
-  50% {
-    right:90%;
-    transform:rotateY(180deg);
-    width:60px;
-    height:10px;
-  }
-  75% {
-    width:100px;
-    height:20px;    
-  }
-} */
-
-
-
-/* bottom 부분 */			
-
-@import url('https://fonts.googleapis.com/css?family=Exo+2:900');
-
-
-
-.bottom {
-	height: 650px;
-	position: relative;
-	/* display: flex; */
-	align-content: center;	
-	justify-content: center;
-	/* height: 70%;
-	width: 100%; */
-}
-
-.bubbles-container {
-    position: absolute;
-    top: 0;
-    left: 50%;
-
-    width: 100%;
-    max-width: 15rem;
-    transform: translateX(-50%);
-	opacity: 0.75;
-	overflow: visible;
-}
-
-.bubbles {
-
-	/* z-index: 1; */
-	width: 100%;
-	height: auto;	
-}
-.bubbles> g > g:nth-of-type(3n) circle {
-	stroke: #87f5fb;
-}
-.bubbles> g > g:nth-of-type(4n) circle {
-	stroke: #87f5fb;
-}
-.bubbles-large>g>g>circle{
-	stroke: white;
-	fill: none;
-
-}
-
-.bubbles-large {
-	overflow: visible;
-
-}
-.bubbles-large>g{
-	transform: translateY(2048px);
-	opacity: 0;
-	will-change: transform, opacity;
-}
-.bubbles-large>g:nth-of-type(1) {
-	animation: up 6.5s infinite;
-
-}
-.bubbles-large>g:nth-of-type(1)>g{
-		transform: translateX(350px);
-}
-.bubbles-large>g:nth-of-type(1)>circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-.bubbles-large>g:nth-of-type(2) {
-	animation: up 5.25s 250ms infinite;
-}
-.bubbles-large>g:nth-of-type(2)>g{
-	transform: translateX(450px);
-}
-.bubbles-large>g:nth-of-type(2)>circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-.bubbles-large>g:nth-of-type(3) {
-	animation: up 6s 750ms infinite;
-}
-.bubbles-large>g:nth-of-type(3)>g {
-	transform: translateX(700px);
-}
-.bubbles-large>g:nth-of-type(3)>circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-.bubbles-large>g:nth-of-type(4) {
-	animation: up 5.5s 1.5s infinite;
-}
-.bubbles-large>g:nth-of-type(4)>g {
-	transform: translateX(500px);
-}
-.bubbles-large>g:nth-of-type(4) >	circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-.bubbles-large>g:nth-of-type(5) {
-	animation: up 6.5s 4s infinite;
-}
-.bubbles-large>g:nth-of-type(5)>g {
-	transform: translateX(675px);
-}
-.bubbles-large>g:nth-of-type(5)>	circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-
-
-
-.bubbles-small {
-	overflow: visible;
-}
-.bubbles-small> g {
-	transform: translateY(2048px);
-	opacity: 0;
-	will-change: transform, opacity;
-}
-.bubbles-small>g circle {
-	transform: scale(0);
-}
-.bubbles-small>g:nth-of-type(1) {
-	animation: up 5.25s infinite;
-}
-.bubbles-small>g:nth-of-type(1)>g {
-	transform: translateX(350px);
-}
-.bubbles-small>g:nth-of-type(1)>circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-
-.bubbles-small>g:nth-of-type(2) {
-	animation: up 5.75s infinite;
-}
-.bubbles-small>g:nth-of-type(2)>g {
-	transform: translateX(750px);
-}
-.bubbles-small>g:nth-of-type(2)>circle {
-	animation: wobble 3s infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(3) {
-	animation: up 5.25s 250ms infinite;
-}
-.bubbles-small>	g:nth-of-type(3)>g {
-	transform: translateX(350px);
-}
-.bubbles-small>	g:nth-of-type(3)>circle {
-	animation: wobble 3s 250ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(4) {
-	animation: up 5.75s 325ms infinite;
-}
-.bubbles-small>	g:nth-of-type(4)>g {
-	transform: translateX(180px);
-}
-.bubbles-small>	g:nth-of-type(4)>circle {
-	animation: wobble 3s 255ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(5) {
-	animation: up 6s 125ms infinite;
-}
-.bubbles-small>	g:nth-of-type(5)>g {
-	transform: translateX(350px);
-}
-.bubbles-small>	g:nth-of-type(5)>circle {
-	animation: wobble 3s 250ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(6) {
-	animation: up 5.13 250ms infinite;
-}
-.bubbles-small>	g:nth-of-type(6)>g {
-	transform: translateX(650px);
-}
-.bubbles-small>	g:nth-of-type(6)>circle {
-	animation: wobble 3s 125ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(7) {
-	animation: up 6.25s 350ms infinite;
-}
-.bubbles-small>	g:nth-of-type(7)>g {
-	transform: translateX(480px);
-}
-.bubbles-small>	g:nth-of-type(7)>circle {
-	animation: wobble 3s 325ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(8) {
-	animation: up 7s 200ms infinite;
-}
-.bubbles-small>	g:nth-of-type(8)>g {
-	transform: translateX(330px);
-}
-.bubbles-small>	g:nth-of-type(8)>circle {
-	animation: wobble 3s 325ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(9) {
-	animation: up 6.25s 233ms infinite;
-}
-.bubbles-small>	g:nth-of-type(9)>g {
-	transform: translateX(230px);
-}
-.bubbles-small>	g:nth-of-type(9)>circle {
-	animation: wobble 3s 275ms infinite ease-in-out;
-}
-.bubbles-small>	g:nth-of-type(10) {
-	animation: up 6s 900ms infinite;
-}
-.bubbles-small>	g:nth-of-type(10)>g {
-	transform: translateX(730px);
-}
-.bubbles-small>	g:nth-of-type(10)>circle {
-	animation: wobble 2s 905ms infinite ease-in-out;
-}
-
-@keyframes wobble {
-	
-	33% {
-		transform: translateX(-50px);
-	}
-	
-	66% {
-		transform: translateX(50px);
-	}
-	
-}
-
-@keyframes up {
-
-	0% {
-		opacity: 0;
-	}
-	
-	10%, 90% {
-		opacity: 1;
-	}
-	
-	100% {
-		opacity: 0;
-		transform: translateY(-1024px);
-	}
-	
-}
