--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -30,6 +30,53 @@ body{
 	animation: animate 15s linear infinite;
 
   }
+  @media only screen and (max-width: 1680px){
+	.loader{
+		top:40%;
+		left:40%;
+		transform:translate(-40%,-40%);
+	  }
+  }
+  @media only screen and (max-width: 1200px){
+	.loader{
+		top:30%;
+		left:30%;
+		transform:translate(-30%,-30%);
+	  }
+  }
+  @media only screen and (max-width: 980px){
+	.loader{
+		top:20%;
+		left:20%;
+		transform:translate(-20%,-20%);
+	  }
+	  .loader h2{
+		font-size:6em;
+		margin-bottom: 15px;
+	  }  
+  }
+  @media only screen and (max-width: 680px){
+	.loader{
+		top:15%;
+		left:15%;
+		transform:translate(-15%,-15%);
+	  }
+	  .loader h2{
+		font-size:4em;
+		margin-bottom: 20px;
+	  }  
+  }
+  @media only screen and (max-width: 580px){
+	.loader{
+		top:10%;
+		left:10%;
+		transform:translate(-10%,-10%);
+	  }
+	  .loader h2{
+		font-size:4em;
+		margin-bottom: 20px;
+	  }  
+  }
   @keyframes animate {
 	0%{
 	  background-position:left 0px top 80px;
