--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -41,3 +41,11 @@ html {
 
 
 
+  @media only screen and (max-width: 1680px){
+	.iphone-l {
+		width: 600px;
+		height: 1061px;
+		margin: 0 auto;
+		margin-top: 50px;
+	}
+}
