--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -1,3 +1,4 @@
+
 body,
 html {
   width: 100%;
@@ -22,8 +23,8 @@ html {
 	margin-top: -200px;
   }
   .iphone-l {
-	width: 600px;
-	height: 1061px;
+	width: 640px;
+	height: 1136px;
 	margin: 0 auto;
 	margin-top: 50px;
 	background: transparent url("https://s.cdpn.io/6859/iphone.png") no-repeat center center;
@@ -40,12 +41,29 @@ html {
 
 
 
-
+/* 
   @media only screen and (max-width: 1680px){
+	.suggest-l {
+
+	}
+
+	.iphone-l {
+		width: 640px;
+		height: 1136px;
+		margin: 0 auto;
+		margin-top: 0px;
+
+	}
+} */
+@media only screen and (max-width: 680px){
+	.suggest-l {
+		display: none;
+	}
+
 	.iphone-l {
 		width: 600px;
-		height: 1061px;
-		margin: 0 auto;
-		margin-top: 50px;
+		height: 1100px;
+		margin: 0 0;
+		margin-top: 0px;
 	}
 }
