--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -67,3 +67,15 @@ html {
 		margin-top: 0px;
 	}
 }
+@media only screen and (max-width: 580px){
+	.suggest-l {
+		display: none;
+	}
+
+	.iphone-l {
+		width: 100%;
+		height: 1100px;
+		margin: 0 0;
+		margin-top: 0px;
+	}
+}
