--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -59,11 +59,15 @@ html {
 	.suggest-l {
 		display: none;
 	}
-
+	/* .box{
+		object-fit: cover;
+		width: 300px;
+	} */
 	.iphone-l {
-		width: 100%;
-		height: 1100px;
-		margin: 0 0;
+	
+		background-size:cover;
+		background-position:center;
+		margin: 0 0%;
 		margin-top: 0px;
 	}
 }
@@ -71,11 +75,14 @@ html {
 	.suggest-l {
 		display: none;
 	}
-
+	/* .box{
+		object-fit: cover;
+		width: 300px;
+	} */
 	.iphone-l {
-		width: 100%;
-		height: 1100px;
-		margin: 0 0;
+		background-size:cover;
+		background-position:center;
+		margin: 0 0%;
 		margin-top: 0px;
 	}
 }
