--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -19,8 +19,8 @@ html {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-left: 220px;
-	margin-top: -200px;
+	margin-left: 160px;
+	margin-top: -340px;
   }
   .iphone-l {
 	padding: 20px;
@@ -42,19 +42,36 @@ html {
 	height: 600px;
 	border: yellowgreen 1px solid;
   }
-  .iphone-l > .screen-ll> .center {
-	position: relative;
+.iphone-l > .screen-ll> .center {
+	/* position: relative; */
 	/* top: 190px;
 	left: 91px; */
-	width: 280px;
+	width: 340px;
 	height: 580px;
 	/* background-color: aqua; */
-	overflow-y: scroll;
+	overflow-y: auto;
+	scrollbar-color: #d4aa70 #e4e4e4;
+	scrollbar-width: thin;
   }
+/*----- center의 overflow-y: scroll Custom ----*/
+.center::-webkit-scrollbar {
+	width: 10px;
+  }
+.center::-webkit-scrollbar-track {
+	background-color: transparent;
+	border-radius: 100px;
+  }
+.center::-webkit-scrollbar-thumb {
+	border-radius: 100px;
+	background-image: linear-gradient(180deg, #38df8b 0%, #1d7177 99%);
+	box-shadow: inset 2px 2px 5px 0 rgba(#f4e0f7, 0.5);
+  }
+
 .item1{
-	width: 280px;
+	width: 320px;
 	height: 206px;
 	border: red 1px solid;
+	padding: 0%;
 
 }
 .wrapper{
