--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -49,22 +49,22 @@ html {
 	width: 340px;
 	height: 580px;
 	/* background-color: aqua; */
-	overflow-y: auto;
-	scrollbar-color: #d4aa70 #e4e4e4;
-	scrollbar-width: thin;
+	-webkit-overflow-y: auto;
+	-webkit-scrollbar-color: #d4aa70 #e4e4e4;
+	-webkit-scrollbar-width: thin;
   }
 /*----- center의 overflow-y: scroll Custom ----*/
 .center::-webkit-scrollbar {
-	width: 10px;
+	-webkit-width: 10px;
   }
 .center::-webkit-scrollbar-track {
-	background-color: transparent;
-	border-radius: 100px;
+	-webkit-background-color: transparent;
+	-webkit-border-radius: 100px;
   }
 .center::-webkit-scrollbar-thumb {
-	border-radius: 100px;
-	background-image: linear-gradient(180deg, #38df8b 0%, #1d7177 99%);
-	box-shadow: inset 2px 2px 5px 0 rgba(#f4e0f7, 0.5);
+	-webkit-border-radius: 100px;
+	-webkit-background-image: linear-gradient(180deg, #38df8b 0%, #1d7177 99%);
+	-webkit-box-shadow: inset 2px 2px 5px 0 rgba(#f4e0f7, 0.5);
   }
 
 .item1{
