--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -83,7 +83,7 @@ html {
 	content: "";
 	width: 79px;
 	height: 79px;
-	border: #1d7177 1px solid;
+	/* border: #1d7177 1px solid; */
 	border-radius: 50%;
 	background-color: rgb(231, 229, 226);
 
@@ -183,19 +183,19 @@ html {
 	.wrapper{
 		width: 270px;
 		height: 120px;;
-		position: fixed;
+		position: sticky;
 		margin: 538px 0px 0% 38px;
 	}
 	.key{
-		margin: 668px 0px 0px 144px;
+		margin: 120px 0px 0px 148px;
 	}
 	.keybutton{
 		content: "";
-		width: 62px;
-		height: 62px;
-		border: #1d7177 1px solid;
+		width: 58px;
+		height: 58px;
+		/* border: #1d7177 1px solid; */
 		border-radius: 50%;
-		/* background-color: rgb(231, 229, 226); */
+		background-color: rgb(231, 229, 226);
 	
 	}
 }
