--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -113,7 +113,7 @@ html {
 		width: 270px;
 		height: 120px;;
 		position: sticky;
-		margin: 568px 0px 0% 38px;
+		margin: 640px 0px 0% 140px;
 	}
 	  .item1{
 		width: 320px;
@@ -190,7 +190,7 @@ html {
 		width: 270px;
 		height: 120px;;
 		position: sticky;
-		margin: 536px 0px 0% 40px;
+		margin: 538px 0px 0% 40px;
 	}
 	.key{
 		margin: 14px 0px 0px 148px;
@@ -208,6 +208,7 @@ html {
 @media all and (max-width:440px) {
 	.suggest-l {
 		margin-left: -150px;
+		margin-left: -10px;
 		top: 0;
 		margin-top: 0;
 	}
@@ -218,7 +219,7 @@ html {
 		width: 270px;
 		height: 120px;;
 		position: sticky;
-		margin: 536px 0px 0% 40px;
+		margin: 538px 0px 0% 40px;
 	}
 }
 @media all and (max-width:300px) {
