--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -250,19 +250,13 @@ a{
 @media all and (max-width:440px) {
 	.suggest-l {
 		margin-left: -150px;
-		margin-left: -10px;
 		top: 0;
 		margin-top: 0;
 	}
 	.center::-webkit-scrollbar {
 		display: none;
 	  }
-	.item1{
-		background-color: #f0d7b4;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
+
 	.wrapper{
 		width: 270px;
 		height: 120px;;
@@ -271,6 +265,11 @@ a{
 	}
 }
 @media all and (max-width:300px) {
+	.suggest-l {
+		margin-left: -130px;
+		top: 0;
+		margin-top: 0;
+	}
 	.iphone-l {
 		width: 300px;
 		height: 836px;
@@ -290,9 +289,12 @@ a{
 	.iphone-l > .screen-ll>.center{
 		height: 380px;
 	}
+	.items{
+		width: 220px;
+	}
 	.item1{
-		/* height: 206px;
-		width: 100%; */
+		height: 206px;
+		width: 220px;
 	}
 	.item1 h2{
 		font-size:4em;	
