--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -1,10 +1,9 @@
 @font-face {
-    font-family: 'KCC-eunyoung';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/KCC-eunyoung-Regular.woff') format('woff');
+    font-family: 'Kanginhan';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/naverfont_07@1.0/Kanginhan.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
-
 html, body{
     margin: 0;
     padding: 0;
@@ -13,20 +12,37 @@ html, body{
 body{
     overflow: hidden;
 }
+.cursor {
+    width: 3rem;
+    height: 3rem;
+    border: 2px solid snow;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: all 0.3s ease;
+    transition-property: background, transform;
+    transform-origin: 100% 100%;
+    backdrop-filter: sepia(20%);
+    background-size: cover;
+}
+
 .smokyWrap {
     background: black;
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: transparent;
     backface-visibility: hidden;
 }
-.smokyWrap>span {
-    font-size: 3em;
-    font-family: 'KCC-eunyoung';
-    display: block;
+.smokyWrap>p>span {
+    font-size: 4em;
+    font-weight: bold;
+    font-family: 'Kanginhan';
     text-shadow: 0 0 0 whitesmoke;
     animation: smoky 5s 3s both;
   }
@@ -155,12 +171,7 @@ span:nth-of-type(26) {
 span:nth-of-type(27) {
     animation-delay: 5.7s;
 }
-span:nth-of-type(28) {
-    animation-delay: 5.8s;
-}
-span:nth-of-type(29) {
-    animation-delay: 5.9s;
-}
+
 .wrap {
     display: flex;
     height: 100%;
@@ -211,14 +222,15 @@ span:nth-of-type(29) {
     justify-content: center;
     align-items: center;
     margin: 5%;
+    font-family: 'Kanginhan';
+    font-size: larger;
+    font-weight: bold;
 }
 
 
 .contPortfolio {
     width: 100%;
-
     display: flex;
-    
     background-color: rgb(63, 63, 62);
 }
 .contPortfolio>div {
@@ -235,13 +247,13 @@ span:nth-of-type(29) {
 
 }
 
-.contPortfolio_imgWrap>img{
+.contPortfolio_imgWrap>a>img{
     position: relative;
     max-width: 100%;
     filter: grayscale(100%) ;
 
 }
-.contPortfolio_imgWrap>img:hover {
+.contPortfolio_imgWrap>a>img:hover {
     filter: grayscale(0%) contrast(110%);
 }
 
@@ -275,6 +287,22 @@ span:nth-of-type(29) {
         overflow: scroll;
         
     }
+    .smokyWrap {
+        background: black;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: transparent;
+        backface-visibility: hidden;
+    }
+    .smokyWrap>p>span {
+        font-size: 3em;
+
+    }
+
+
     .wrap {
         display: flex;
         flex-direction: column;
@@ -286,7 +314,24 @@ span:nth-of-type(29) {
         width: 100%;
         height: auto;
     }
- 
+    .contentWrap {
+        width: 100%;
+    }
+
+    .contPortfolio_imgWrap{
+
+        padding: 0%;
+    
+    }
+
+
+}
+@media all and (max-width:680px){
+
+    .contPortfolio {
+        flex-direction: column;
+    }
+
 
 
 }
